# local_content_mcp_server

./: .dockerignore  .gitignore  API_USAGE.md  CLAUDE_DESKTOP_TEST.md  CMakeLists.txt  Dockerfile  License  MCP_INTEGRATION_GUIDE.md  README.md  docker-compose.yml  mcp_bridge.js  mcp_config.json  package.json
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/include/: content_client.hpp  http_client.hpp  mcp_client.hpp
client/src/: content_client.cpp  http_client.cpp  main.cpp  mcp_client.cpp
config/: client.json  server.json
data/: content.db
include/: config.hpp  handler.hpp  plugin.hpp  server.hpp  storage.hpp
plugins/: CMakeLists.txt  echo_plugin.cpp
proto/: message.proto
resources/: config.json
scripts/: install.sh  local-content-mcp.service  start_server.sh  test_client.sh
server/: CMakeLists.txt
server/include/: config.hpp  content_manager.hpp  database.hpp  file_upload.hpp  http_handler.hpp  llama_client.hpp  mcp_server.hpp
server/src/: config.cpp  content_manager.cpp  database.cpp  file_upload.cpp  http_handler.cpp  llama_client.cpp  main.cpp  mcp_server.cpp
src/: CMakeLists.txt  Config.cpp  handler.cpp  main.cpp  plugin.cpp  server.cpp  storage.cpp
tests/: CMakeLists.txt  handler_test.cpp  server_test.cpp
uploads/: metadata.json
web/: .env  README.md  TEST_README.md  mcp_bridge.js  package-lock.json  package.json  test_all_mcp_functions.js  test_create_content.js  test_get_content.js  test_get_statistics.js  test_get_tags.js  test_list_content.js  test_mcp_complete.js  test_search_content.js
web/public/: index.html  test.html
web/src/: App.tsx  index.tsx
web/src/components/: ApiTest.tsx  ConfigView.tsx  ContentDetail.tsx  ContentForm.tsx  ContentList.tsx  ContentSearch.tsx  MCPInterface.tsx  TagsView.tsx
web/src/services/: api.ts
